rename CategorizedAttachmentsResult
