# docs/openapi/schemas-paper-v1.yaml
@@ -119,6 +119,8 @@ components:
           items:
             type: string
             description: url con fileKey di safestorage
+        categorizedAttachments:
+          $ref: '#/components/schemas/RuleEngineResult'
       allOf:
       - $ref: '#/components/schemas/PaperEvent'
 
@@ -419,3 +421,31 @@ components:
           type: string
           description: Data di produzione del documento.
           format: date-time
+    ResultFilterEnum:
+      type: string
+      enum:
+        - SUCCESS
+        - DISCARD
+        - NEXT
+    ResultFilter:
+      type: object
+      properties:
+        fileKey:
+          type: string
+        result:
+          $ref: '#/components/schemas/ResultFilterEnum'
+        reasonCode:
+          type: string
+        reasonDescription:
+          type: string
+    RuleEngineResult:
+      type: object
+      properties:
+        acceptedAttachments:
+          items:
+            $ref: '#/components/schemas/ResultFilter'
+        discardedAttachments:
+          items:
+            $ref: '#/components/schemas/ResultFilter'
+
+
