# src/main/java/it/pagopa/pn/paperchannel/rule/handler/RuleEngineHandler.java
@@ -1,6 +1,6 @@
 package it.pagopa.pn.paperchannel.rule.handler;
 
-import it.pagopa.pn.paperchannel.rule.model.RuleEngineResult;
+import it.pagopa.pn.paperchannel.rule.model.CategorizedAttachmentsResult;
 import it.pagopa.pn.paperchannel.rule.model.RuleContext;
 import it.pagopa.pn.paperchannel.rule.model.RuleModel;
 
@@ -8,5 +8,5 @@ import java.util.List;
 
 public interface RuleEngineHandler {
 
-    RuleEngineResult filter(List<RuleModel> rules, RuleContext ruleContext);
+    CategorizedAttachmentsResult filter(List<RuleModel> rules, RuleContext ruleContext);
 }
